// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</Link>
`;

exports[`2. tile b 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          ROYALS
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags />
      <Text
        style={
          Object {
            "color": "#696969",
            "flexWrap": "wrap",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 14,
            "lineHeight": 20,
            "marginBottom": 10,
          }
        }
      >
        <Text>
          
          The 
          <Text>
            Duke of Edinburgh
          </Text>
           could be charged with driving without due care and attention after his car accident yesterday
          ...
        </Text>
      </Text>
    </View>
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 15,
        "paddingHorizontal": 12,
        "paddingTop": 11,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 10,
          "width": "100%",
        }
      }
    >
      <Image />
    </View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          ROYALS
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
            "paddingBottom": 6,
            "paddingTop": 5,
          }
        }
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "45%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 5,
          "width": "55%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          ROYALS
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "45%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 5,
          "width": "55%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          ROYALS
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`6. tile f 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#005B8D",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        LABEL
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      Venezuela shows how Corbyn’s socialism works
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 19,
          "lineHeight": 21,
          "paddingBottom": 10,
        }
      }
    >
      Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
    </Text>
    <ArticleFlags />
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
  </View>
</Link>
`;

exports[`7. tile g 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#FFFFFF",
          "borderWidth": 1,
          "overflow": "hidden",
          "width": "30%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingTop": 5,
          "width": "70%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#005B8D",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          LABEL
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`8. tile i 1`] = `
<Link>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "paddingBottom": 25,
        "paddingHorizontal": 40,
        "paddingTop": 15,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
          "textAlign": "center",
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`9. tile j 1`] = `
<Link>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 10,
        "paddingVertical": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "33.33%",
        }
      }
    >
      <Image />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 5,
          "width": "66.66%",
        }
      }
    >
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          ROYALS
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 5,
          }
        }
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags />
    </View>
  </View>
</Link>
`;

exports[`10. tile l 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 12,
        "paddingVertical": 10,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "lineHeight": 14,
              "marginBottom": 0,
            }
          }
        >
          ROYALS
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#333333",
            "fontFamily": "TimesModern-Bold",
            "fontSize": 22,
            "fontWeight": "900",
            "lineHeight": 22,
            "marginBottom": 11,
            "marginTop": 5,
          }
        }
      >
        Prince Philip ‘could be prosecuted’ over car crash
      </Text>
      <ArticleFlags />
    </View>
  </View>
</Link>
`;
